@@ -5,7 +5,8 @@ Changelog
 1.14.1 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Command: fix instance discover when bound to public interface.
+  [jone]
 
 
 1.14.0 (2015-02-24)
